Added user registration and bcrypt password hashing

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "app/static/open-iconic"]
     path = app/static/open-iconic
     url = https://github.com/iconic/open-iconic
+[submodule "app/static/jQuery-Form-Validator"]
+	path = app/static/jQuery-Form-Validator
+	url = https://github.com/victorjonsson/jQuery-Form-Validator
