--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-flask
-flask-login
-flask-bcrypt
-flask-mail
-flask-wtf
-flask-sqlalchemy
-flask-dance
-sqlalchemy-migrate
-sqlalchemy-utils
 argparse
+Flask-Bcrypt>=0.7.1
+Flask-Dance>=0.8.2
+Flask-Login>=0.3.2
+Flask-Mail>=0.9.1
+Flask-SQLAlchemy>=2.1
+Flask-WTF>=0.12
+SQLAlchemy>=1.0.12
+SQLAlchemy-Utils>=0.31.6
+slugify==0.0.1
