--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-Mail>=0.9.1
 Flask-Misaka>=0.4.1
 Flask-SQLAlchemy>=2.1
 Flask-WTF>=0.12
+Flask-Testing>=0.4
 SQLAlchemy>=1.0.12
 SQLAlchemy-Utils>=0.31.6
 slugify==0.0.1
