Working on implementing the color scheme

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "app/static/Skeleton"]
 	path = app/static/Skeleton
-	url = https://github.com/dhg/Skeleton
+    url = https://github.com/dhg/Skeleton
+    ignore = dirty
 [submodule "app/static/open-iconic"]
     path = app/static/open-iconic
     url = https://github.com/iconic/open-iconic
+    ignore = dirty
 [submodule "app/static/jQuery-Form-Validator"]
 	path = app/static/jQuery-Form-Validator
-	url = https://github.com/victorjonsson/jQuery-Form-Validator
+    url = https://github.com/victorjonsson/jQuery-Form-Validator
+    ignore = dirty
