--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-Bcrypt>=0.7.1
 Flask-Dance>=0.8.2
 Flask-Login>=0.3.2
 Flask-Mail>=0.9.1
+Flask-Migrate==2.0.0
 Flask-Misaka>=0.4.1
 Flask-SQLAlchemy>=2.1
 Flask-WTF>=0.12
@@ -11,6 +12,5 @@ Flask-Testing>=0.4
 gunicorn==19.6.0
 SQLAlchemy>=1.0.12
 SQLAlchemy-Utils>=0.31.6
-SQLAlchemy-Migrate>=0.10.0
 slugify==0.0.1
 terminaltables==2.1.0
