--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-Login>=0.3.2
 Flask-Mail>=0.9.1
 Flask-Migrate==2.0.0
 Flask-Misaka>=0.4.1
+Flask-Script==2.0.5
 Flask-SQLAlchemy>=2.1
 Flask-WTF>=0.12
 Flask-Testing>=0.4
