--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-Bcrypt>=0.7.1
 Flask-Dance>=0.8.2
 Flask-Login>=0.3.2
 Flask-Mail>=0.9.1
+Flask-Moment==0.5.1
 Flask-Misaka>=0.4.1
 Flask-SQLAlchemy>=2.1
 Flask-WTF>=0.12
