--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "app/static/moment"]
 	path = app/static/moment
 	url = https://github.com/moment/moment
+[submodule "app/static/bxslider-4"]
+	path = app/static/bxslider-4
+	url = https://github.com/stevenwanderski/bxslider-4
