--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,6 @@ gunicorn==19.6.0
 SQLAlchemy>=1.0.12
 SQLAlchemy-i18n==1.0.3
 SQLAlchemy-Utils>=0.31.6
-SQLAlchemy-Migrate>=0.10.0
 slugify==0.0.1
 terminaltables==2.1.0
+WTForms-Alchemy==0.16.3
