--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "app/static/bxslider-4"]
 	path = app/static/bxslider-4
 	url = https://github.com/stevenwanderski/bxslider-4
+[submodule "app/static/fonts/Raleway_Fixed_Numerals"]
+	path = app/static/fonts/Raleway_Fixed_Numerals
+	url = https://github.com/h-ibaldo/Raleway_Fixed_Numerals
