--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ Flask-Bcrypt>=0.7.1
 Flask-Dance>=0.8.2
 Flask-Login>=0.3.2
 Flask-Mail>=0.9.1
-Flask-MailGun3==0.1.5
+# fix BCC
+https://github.com/supervacuo/Flask-MailGun/archive/develop.zip#egg=Flask-MailGun3==0.1.5
 Flask-Migrate==2.0.3
 Flask-Moment==0.5.1
 Flask-Misaka>=0.4.1
