Better styling for comment textarea

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "app/static/jQuery-form"]
 	path = app/static/jQuery-form
 	url = http://github.com/malsup/form/
+[submodule "app/static/autosize"]
+	path = app/static/autosize
+	url = https://github.com/jackmoore/autosize
